welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:5: error: not found: value ver
    ver y=getY()
    ^ZigZag:7: error: not found: value y
    setPos(x,y+1)
             ^ZigZag:8: error: not found: value y
   	parcoursDroite(x,y)
                         ^ZigZag:11: error: not found: value y
    setPos(x,y+1)
             ^ZigZag:12: error: not found: value y
   	parcoursGauche(x,y)
                         ^